--- a/src/app/pages/settings-popup/settings-popup.component.scss
+++ b/src/app/pages/settings-popup/settings-popup.component.scss
@@ -1,17 +1,54 @@
 @use "viewports";
 
-::ng-deep {
-    .p-dialog {
-        min-width: 60%;
-        @include viewports.mobile {
-            width: 100%;
-            height: 100vh;
-            border-radius: 0;
+:host {
+    ::ng-deep {
+        .p-dialog {
+            width: 60%;
         }
-    }
 
-    .p-menuitem-link {
-        border-radius: 0;
-        outline: none;
+        .p-menuitem-link {
+            border-radius: 0;
+            outline: none;
+        }
+
+        @include viewports.mobile {
+            .p-dialog-mask {
+                justify-content: stretch;
+                align-items: start;
+            }
+
+            .p-dialog {
+                width: 100%;
+                height: 100vh;
+                border-radius: 0;
+                border: none;
+                max-height: 100vh;
+            }
+
+            .p-dialog-header-close {
+                padding: 1.5rem;
+            }
+
+            .p-dialog-header-close-icon {
+                font-size: 2rem;
+            }
+
+            .p-dialog-header {
+                flex-direction: column-reverse;
+                align-items: flex-start;
+                gap: 0.5rem;
+                padding: 0.5rem;
+                border-radius: 0;
+            }
+
+            .p-dialog-title {
+                margin-left: 2rem;
+            }
+
+            .p-dialog-content {
+                overflow: scroll;
+                border-radius: 0;
+            }
+        }
     }
 }
